soluciones/weekly/laravel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: laravel
spec:
  type: NodePort
  selector:
    app: laravel
  ports:
  - port: 8000
    targetPort: 8000
