soluciones/weekly/laravel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-ingress
  namespace: laravel
  labels:
    name: laravel
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: laravel
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: laravel-service
            port: 
              number: 8000
